--- a/web/src/pages/TeacherForm/styles.css
+++ b/web/src/pages/TeacherForm/styles.css
@@ -51,6 +51,7 @@
   color: var(--color-primary-darker);
 }
 
+#page-teacher-form main fieldset .input-block + .input-block,
 #page-teacher-form main fieldset .input-block + .textarea-block,
 #page-teacher-form main fieldset .select-block + .input-block {
   margin-top: 1.4rem;
